# shortie

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  daemon.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  tokenizer.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
